修改测试类