@@ -1,6 +1,7 @@
 package test.circuit;
 
 import java.io.File;
+import java.net.URL;
 
 import org.junit.Test;
 
@@ -11,8 +12,24 @@ public class TestConfiguration {
 	@Test
 	public void testParse() throws Exception {
 		ElecCompDef comp = null;
-		File file = new File("http://172.16.30.2:8082/configurations/Relay/CZY08A.xml");
-		comp = JaxbUtil.converyToJavaBean(file.toURL(), ElecCompDef.class);
+		URL 
+		url = new URL("http://172.16.30.2:8082/configurations/Relay/CZY08A.xml");
+		comp = JaxbUtil.converyToJavaBean(url, ElecCompDef.class);
+		System.out.println(comp);
+		url = new URL("http://172.16.30.2:8082/configurations/Relay/CZY08A.xml");
+		comp = JaxbUtil.converyToJavaBean(url, ElecCompDef.class);
+		System.out.println(comp);
+		url = new URL("http://172.16.30.2:8082/configurations/Relay/CZY08A.xml");
+		comp = JaxbUtil.converyToJavaBean(url, ElecCompDef.class);
+		System.out.println(comp);
+		url = new URL("http://172.16.30.2:8082/configurations/Relay/CZY08A.xml");
+		comp = JaxbUtil.converyToJavaBean(url, ElecCompDef.class);
+		System.out.println(comp);
+		url = new URL("http://172.16.30.2:8082/configurations/Relay/CZY08A.xml");
+		comp = JaxbUtil.converyToJavaBean(url, ElecCompDef.class);
+		System.out.println(comp);
+		url = new URL("http://172.16.30.2:8082/configurations/Relay/CZY08A.xml");
+		comp = JaxbUtil.converyToJavaBean(url, ElecCompDef.class);
 		System.out.println(comp);
 
 //		comp = new ElecCompDef();
